added indext..html , styles.css

--- a/indext..html
+++ b/indext..html
@@ -11,45 +11,48 @@
 <body>
     <h1 id="Semester 2 Schedule">Semester 2 Schedule</h1>
     <div>
-        <table aria-labelledby="weeklyCourseSchedule" >
+        <table aria-labelledby="weeklyCourseSchedule">
             <thead>
                 <tr>
-                    <th id="Corse" scope="col">Corse</th>
-                    <th id="Time" scope="colgroup" colspan="2">Time</th>
-                    <th id="Room" scope="col">Room</th>
-                    <th id="Day" scope="col">Day</th>
+                    <th id="Corse" scope="col"></th>
+                    <th scope="col">Product A</th>
+                    <th scope="col">Product B</th>
+                    <th scope="col">Product C </th>
                 </tr>
             <tbody>
                 <tr>
-                    <th id="English" scope="rowgroup" rowspan="2">English 2</th>
-                    <td headers="English Time " >9:00</td>
-                    <td headers="English Time" >11:00</td>
-                    <td headers="English Room" >L2201</td>
-                    <td headers="English Day">Monday</td>
+                    <th id="Durability" scope="rowgroup">Durability</th>
+                    <td>10/10</td>
+                    <td>5/10</td>
+                    <td>7/10</td>
+
                 </tr>
+
                 <tr>
-                    <td headers="English Time " >9:00</td>
-                    <td headers="English Time" >11:00</td>
-                    <td headers="English Room" >L2201</td>
-                    <td headers="English Day">Wednesday</td>
+                    <th id="Design" scope="row">Design</th>
+                    <td>3/10</td>
+                    <td>8/20</td>
+                    <td>7/10</td>
 
                 </tr>
                 <tr>
-                    <th id="Geography" scope="row">Geography</th>
-                    <td headers="Geography Time">11:00</td>
-                    <td headers="Geography Time">12:45</td>
-                    <td headers="Geography Room">G107</td>
-                    <td headers="Geography Day">Tuesday</td>
+                    <th id="Usability" scope="row">Usability</th>
+                    <td>9/10</td>
+                    <td>7/10</td>
+                    <td>3/10</td>
+
                 </tr>
-<tr>
-    <th id="Bio" scope="row">Bio</th>
-    <td headers="Bio Time">9:00</td>
-    <td headers="Bio Time">11:00</td>
-    <td headers="Bio Room">B302</td>
-    <td headers="Bio Day">Friday</td>
-</tr>
+                <tr>
+                    <th id="Price" scope="row">Price</th>
+                    <td>9/10</td>
+                    <td>7/10</td>
+                    <td>3/10</td>
+
+                </tr>
+
 
             </tbody>
+            <tfoot></tfoot>
             </thead>
 
 
