--- a/indext..html
+++ b/indext..html
@@ -14,39 +14,52 @@
         <table aria-labelledby="weeklyCourseSchedule">
             <thead>
                 <tr>
-                    <th id="Corse" scope="col"></th>
-                    <th scope="col">Product A</th>
-                    <th scope="col">Product B</th>
-                    <th scope="col">Product C </th>
+                    <th id="Team" scope="col">Team</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">How many titles</th>
+                    <th scope="col">Year it was created</th>
                 </tr>
             <tbody>
                 <tr>
-                    <th id="Durability" scope="rowgroup">Durability</th>
-                    <td>10/10</td>
-                    <td>5/10</td>
-                    <td>7/10</td>
+                    <th id="Palmeiras" scope="row">
+                        <img src="./image/Logo pal trabalho.jpg" alt="Logo do Palmeiras"
+                            style="width: 100px; height: 100px;">
+                    </th>
+
+                    <td>Palmeiras</td>
+                    <td>Palmeiras has a total of 45 important titles</td>
+                    <td>1914</td>
 
                 </tr>
 
                 <tr>
-                    <th id="Design" scope="row">Design</th>
-                    <td>3/10</td>
-                    <td>8/20</td>
-                    <td>7/10</td>
+                    <th id="Santos" scope="row">
+                        <img src="./image/Santos-FC-PNG-HD.png" alt="Logo do Santos" style="width: 100px; height: 100px;">
+
+                    </th>
+                    <td>Santos</td>
+                    <td>Santos has a total of 45 important titles</td>
+                    <td>1912</td>
 
                 </tr>
                 <tr>
-                    <th id="Usability" scope="row">Usability</th>
-                    <td>9/10</td>
-                    <td>7/10</td>
-                    <td>3/10</td>
+                    <th id="Flamengo" scope="row">
+                        <img src="./image/flamengo-logo-0.png" alt="Logo do Flamengo"
+                            style="width: 100px; height: 100px;">
+                    </th>
+                    <td>Flamengo</td>
+                    <td>Flamengo has a total of 32 important titles</td>
+                    <td>1895</td>
 
                 </tr>
                 <tr>
-                    <th id="Price" scope="row">Price</th>
-                    <td>9/10</td>
-                    <td>7/10</td>
-                    <td>3/10</td>
+                    <th id="Price" scope="row">
+                        <img src="./image/Sao_Paulo_FC-logo-FB0DC153A3-seeklogo.com.png" alt="Logo do Sao Paulo"
+                            style="width: 100px; height: 100px;">
+                    </th>
+                    <td>Sao Paulo</td>
+                    <td>Sao Paulo has a total of 44 important titles</td>
+                    <td>1930</td>
 
                 </tr>
 
